@@ -3,6 +3,7 @@ v1.2 - Pending
 	+ Ability to rename playlists (requires mpd >= 0.13)
 	+ Bug: Multimedia keys no longer work in Gnome 2.18 (Florian)
 	+ Bug: Hide statusbar in collapse mode when showing from systray
+	+ Bug: Cover artwork filename doesn't use system's locale charset
 
 v1.1.1 - May 18, 2007
 	+ Add Swedish translation (Daniel Nylander)
